modal content added

--- a/index.html
+++ b/index.html
@@ -344,13 +344,45 @@
                   class="modal modal-bottom sm:modal-middle"
                 >
                   <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
-                    </p>
+                    <div class="card bg-base-100 shadow-xl"><figure class="px-10 pt-10">
+                      <img src="./images/fruit6.png" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                      <p class="card-title">12.90$ - 18.85$</p>
+                      <h2>Apples</h2>
+                      <!-- rating -->
+                      <div class="rating">
+                        <input
+                          type="radio"
+                          name="rating-1"
+                          class="mask mask-star-2 bg-orange-400"
+                        />
+                        <input
+                          type="radio"
+                          name="rating-1"
+                          class="mask mask-star-2 bg-orange-400"
+                        />
+                        <input
+                          type="radio"
+                          name="rating-1"
+                          class="mask mask-star-2 bg-orange-400"
+                        />
+                        <input
+                          type="radio"
+                          name="rating-1"
+                          class="mask mask-star-2 bg-orange-400"
+                        />
+                        <input
+                          type="radio"
+                          name="rating-1"
+                          class="mask mask-star-2 bg-orange-400"
+                          checked
+                        />
+                      </div></div>
                     <div class="modal-action">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
+                      <button class="btn btn-ghost">Close</button>
+                      <button class="btn btn-primary">Buy now</button>
                     </div>
                   </form>
                 </dialog>
@@ -403,13 +435,47 @@
                   class="modal modal-bottom sm:modal-middle"
                 >
                   <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
-                    </p>
+                    <div class="card bg-base-100 shadow-xl">
+                      <figure class="px-10 pt-10">
+                        <img src="./images/fruit7.png" class="rounded-xl" />
+                      </figure>
+                      <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Orange</p>
+                        <!-- rating -->
+                        <div class="rating">
+                          <input
+                            type="radio"
+                            name="rating-2"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-2"
+                            class="mask mask-star-2 bg-orange-400"
+                            checked
+                          />
+                          <input
+                            type="radio"
+                            name="rating-2"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-2"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-2"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                        </div>
+                      </div>
                     <div class="modal-action">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
+                      <button class="btn btn-ghost">Close</button>
+                      <button class="btn btn-primary">Buy now</button>
                     </div>
                   </form>
                 </dialog>
@@ -462,13 +528,47 @@
                   class="modal modal-bottom sm:modal-middle"
                 >
                   <form method="dialog" class="modal-box">
-                    <h3 class="font-bold text-lg">Hello!</h3>
-                    <p class="py-4">
-                      Press ESC key or click the button below to close
-                    </p>
+                    <div class="card bg-base-100 shadow-xl">
+                      <figure class="px-10 pt-10">
+                        <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
+                      </figure>
+                      <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <p>Red Dragon</p>
+                        <!-- rating -->
+                        <div class="rating">
+                          <input
+                            type="radio"
+                            name="rating-3"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-3"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-3"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                          <input
+                            type="radio"
+                            name="rating-3"
+                            class="mask mask-star-2 bg-orange-400"
+                            checked
+                          />
+                          <input
+                            type="radio"
+                            name="rating-3"
+                            class="mask mask-star-2 bg-orange-400"
+                          />
+                        </div>
+                      </div>
                     <div class="modal-action">
                       <!-- if there is a button in form, it will close the modal -->
-                      <button class="btn">Close</button>
+                      <button class="btn btn-ghost">Close</button>
+                      <button class="btn btn-primary">Buy now</button>
                     </div>
                   </form>
                 </dialog>
@@ -727,10 +827,10 @@
             </p>
           </div>
 
-          <div class="flex flex-col items-center lg:flex-row gap-4">
+          <div class="flex flex-col md:flex-row gap-4">
             <div class="flex flex-col items-center gap-2">
               <div
-                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
               >
                 <img class="max-w-full" src="./images/Group 46.png" alt="" />
                 <div>
@@ -743,7 +843,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
               >
                 <img class="max-w-full" src="./images/Group 47.png" alt="" />
                 <div>
@@ -756,7 +856,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col lg:flex-row items-center gap-2 text-center lg:text-left"
+                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
               >
                 <img class="max-w-full" src="./images/Group 48.png" alt="" />
                 <div>
@@ -769,7 +869,7 @@
                 </div>
               </div>
             </div>
-            <div class="-order-1 lg:order-none">
+            <div class="-order-1 md:order-none">
               <img
                 src="./images/whychoose1.png"
                 alt=""
@@ -778,7 +878,7 @@
             </div>
             <div class="flex flex-col items-center gap-2">
               <div
-                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
                 <img class="max-w-full" src="./images/Group 49.png" alt="" />
                 <div>
@@ -791,7 +891,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
                 <img class="max-w-full" src="./images/Group 50.png" alt="" />
                 <div>
@@ -804,7 +904,7 @@
                 </div>
               </div>
               <div
-                class="flex flex-col lg:flex-row-reverse items-center gap-2 text-center lg:text-right"
+                class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
                 <img class="max-w-full" src="./images/Group 51.png" alt="" />
                 <div>
@@ -821,8 +921,6 @@
         </div>
       </section>
     </main>
-
-    <!-- foot foot footer -->
     <footer class="footer footer-center p-10 bg-gray-900 text-white rounded">
       <div class="flex items-center">
         <img src="./images/logo.png" alt="" />
