--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
               <div
                 class="col-span-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 text-black"
               >
-                <div class="card card-compact bg-white shadow-xl text-center">
+                <div class="card card-compact bg-transparent shadow-xl text-center">
                   <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
                       <img src="./images/member1.png" />
@@ -661,7 +661,7 @@
                     ></a>
                   </div>
                 </div>
-                <div class="card card-compact bg-base-100 shadow-xl text-black">
+                <div class="card card-compact bg-transparent shadow-xl text-black">
                   <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
                       <img src="./images/member2.png" />
@@ -710,7 +710,7 @@
                     ></a>
                   </div>
                 </div>
-                <div class="card card-compact bg-base-100 shadow-xl">
+                <div class="card card-compact bg-transparent shadow-xl">
                   <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
                       <img src="./images/member3.png" />
@@ -760,7 +760,7 @@
                   </div>
                 </div>
                 <div
-                  class="card card-compact bg-base-100 shadow-xl text-center"
+                  class="card card-compact bg-transparent shadow-xl text-center"
                 >
                   <div class="avatar justify-center">
                     <div class="w-24 rounded-full">
