--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                       </figure>
                       <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
-                        <p>Red Dragon</p>
+                        <p>Banana</p>
                         <!-- rating -->
                         <div class="rating">
                           <input
@@ -921,10 +921,8 @@
           </div>
 
           <div class="flex flex-col md:flex-row gap-4">
-            <div class="flex flex-col items-center gap-2">
-              <div
-                class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left"
-              >
+            <div class="flex flex-col items-center gap-8">
+              <div class="flex flex-col md:flex-row items-center gap-2 text-center md:text-left" >
                 <img class="max-w-full" src="./images/Group 46.png" alt="" />
                 <div>
                   <h3>Dedicated Team</h3>
@@ -969,7 +967,7 @@
                 class="max-w-full min-h-full object-cover"
               />
             </div>
-            <div class="flex flex-col items-center gap-2">
+            <div class="flex flex-col items-center gap-8">
               <div
                 class="flex flex-col md:flex-row-reverse items-center gap-2 text-center md:text-right"
               >
