--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Awlad Hossain</h2>
+                    <h2 class="text-xl">Awlad Hossain</h2>
                     <p>Fruits Expert</p>
                   </div>
                   <div class="flex gap-4 pb-2 justify-center text-red-600">
