--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Safia Chowdhury</h2>
+                    <h2 class="text-xl">Safia Chowdhury</h2>
                     <p>Fruits Expert</p>
                   </div>
                   <div class="flex gap-4 pb-2 justify-center text-red-600">
@@ -810,7 +810,7 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title">Rokib Hossain</h2>
+                    <h2 class="text-xl">Rokib Hossain</h2>
                     <p>Fruits Expert</p>
                   </div>
                   <div class="flex gap-4 pb-2 justify-center text-red-600">
@@ -861,7 +861,7 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <h2 class="card-title text-center">Chaity Ahmed</h2>
+                    <h2 class="text-xl">Chaity Ahmed</h2>
                     <p>Fruits Expert</p>
                   </div>
                   <div class="flex gap-4 pb-2 justify-center text-red-600">
